# solver_FLP

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: using_example.ipynb
examples/data/: data_getter_matrix.pickle  df_with_demand.geojson  policlinics.geojson
src/method/: __init__.py  __main__.py  genetic_algorithm.py  location_problem.py  plots.py
