[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solver_FLP"
version = "0.0.1"
description = "A Python package for solving optimization problems"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENCE"}
authors = [
    {name = "Valeria Tikhevich", email = "ms.tihvv@mail.ru"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "geopandas",
    "pulp",
    "matplotlib",
    "tqdm",
    "pyarrow"
]

[tool.setuptools.packages.find]
where = ["src"]
